# quartz

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALLATION.md  LICENSE  README.md  build.rs  extract_changes.sh  install.sh  release.sh  rollback.sh
.github/: FUNDING.yml
.github/workflows/: release.yml  rust-clippy.yml  rust.yml  tests.yml
ci/: macos-install-packages.sh  ubuntu-install-packages.sh
doc/: quartz.1.md
man/: quartz.1
man/man1/: quartz.1
src/: cli.rs  config.rs  context.rs  cookie.rs  endpoint.rs  env.rs  form.rs  history.rs  lib.rs  main.rs  snippet.rs  state.rs  tree.rs  validator.rs
src/action/: body.rs  completion.rs  config.rs  cookie.rs  env.rs  handle.rs  header.rs  history.rs  init.rs  last.rs  ls.rs  mod.rs  query.rs  send.rs  show.rs  snippet.rs  var.rs
src/internals/: layout.rs
tests/: integration_tests.rs  mod.rs
tests/integration_test_cases/: body.rs  context.rs  context_variable.rs  endpoints.rs  headers.rs  init.rs  mod.rs  query.rs  url.rs  var.rs
tests/integration_tests/: body.rs  config.rs  context.rs  context_variable.rs  endpoints.rs  headers.rs  init.rs  method.rs  mod.rs  query.rs  url.rs
tests/it/: body.rs  config.rs  endpoint.rs  endpoints.rs  env.rs  headers.rs  init.rs  mod.rs  op.rs  query.rs
tests/utils/: mod.rs
