[package]
name = "quartz-cli"
description = "The CLI way to build and test Rest APIs"
version = "0.1.5"
edition = "2021"
author = ["Eduardo Rodrigues <contato@edurodrigues.dev>"]
license = "Apache-2.0"
repository = "https://github.com/EduardoRodriguesF/quartz"
homepage = "https://github.com/EduardoRodriguesF/quartz"
keywords = ["cli", "api", "http-client", "curl"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
colored = "2.0.0"
hyper-tls = "0.5.0"

[[bin]]
name = "quartz"
path = "src/main.rs"
