[package]
name = "quartz-cli"
description = "The CLI way to build and test Rest APIs"
version = "0.8.0"
edition = "2021"
authors = ["Eduardo Rodrigues <contato@edurodrigues.dev>"]
license = "Apache-2.0"
repository = "https://github.com/EduardoRodriguesF/quartz"
homepage = "https://github.com/EduardoRodriguesF/quartz"
keywords = ["cli", "api", "http-client", "curl"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.7", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
colored = "2.0.0"
hyper-tls = "0.5.0"
chrono = "0.4.26"
openssl = { version = "0.10.55", features = ["vendored"] }
serde_json = "1.0.112"

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "quartz"
path = "src/main.rs"

[package.metadata.deb]
name = "quartz"
assets = [
	[
        "target/release/quartz",
        "usr/bin/",
        "755",
    ],
	[
		"doc/quartz.1",
		"usr/share/man/man1/",
		"644",
	],
	[
		"README.md",
		"usr/share/doc/quartz/",
		"644",
	],
	[
		"CHANGELOG.md",
		"usr/share/doc/quartz/",
		"644",
	],
	[
		"LICENSE",
		"usr/share/doc/quartz/",
		"644",
	],
]
